--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,7 @@ server.port=9150
 # DATABASE
 # ===============================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jwt
-#  jdbc:mysql://mysqldb/jwt
-#  jdbc:mysql://localhost:3306/jwt
+spring.datasource.url=jdbc:mysql://mysqldb/jwt
 spring.datasource.username=root
 spring.datasource.password=1234
 # ===============================
